<resources>
    <string name="app_name">Scoring</string>
    <string name="txt_title_a">Group A</string>
    <string name="txt_title_b">Group B</string>
    <string name="txt_score_a">0</string>
    <string name="txt_score_b">0</string>
    <string name="btn_a1">+1</string>
    <string name="btn_a2">+2</string>
    <string name="btn_a3">+3</string>
    <string name="btn_b1">+1</string>
    <string name="btn_b2">+2</string>
    <string name="btn_b3">+3</string>
    <string name="btn_redo">redo</string>
    <string name="btn_reset">reset</string>
</resources>